# IR-MAI

./: .gitignore  README.md
lab1/: requirements.txt
lab1/scripts/: 01_fetch_meta_arxiv.py  02_download_pdfs.py  03_pdf_to_text.py  04_make_sample.py  compute_stats.py  verify_corpus.py
lab1/tests/: run_tests.sh  test_metadata_format.py  test_output.txt  test_text_files_exist.py
lab2/scripts/: pipeline.py
lab2/tests/: run_tests.sh  test_output.txt
lab3/: CMakeLists.txt
lab3/include/: tokenizer.h
lab3/src/: tokenize_main.cpp  tokenizer.cpp
lab3/tests/: run_tests.sh  test_output.txt  tokens.tsv
lab3/tests/tmp_docs/: 000001.txt  000002.txt
lab4/: CMakeLists.txt
lab4/include/: stemmer.h
lab4/src/: stem_main.cpp  stemmer.cpp
lab4/tests/: run_tests.sh  sample_tokens.tsv  stems.tsv  test_output.txt
lab5/: CMakeLists.txt
lab5/src/: zipf_main.cpp
lab5/tests/: freq.tsv  run_tests.sh  sample_tokens.tsv  test_output.txt  zipf.tsv
lab7/: CMakeLists.txt
lab7/include/: dynarray_u32.h  hashtable.h  index_writer.h
lab7/src/: dynarray_u32.cpp  hashtable.cpp  index_writer.cpp  indexer_main.cpp
lab7/tests/: run_tests.sh  test_output.txt
lab8/: CMakeLists.txt  webapp.py
lab8/include/: bool_ops.h  index_reader.h  query_parser.h
lab8/src/: bool_ops.cpp  index_reader.cpp  query_parser.cpp  search_main.cpp
lab8/tests/: run_tests.sh  test_output.txt
